# mellea-lrc

./: .copier-answers.yml  .env.example  .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  MAINTAINERS.md  PRODUCT.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CICD.yml  CICD_impl.yml  codeql.yml
benchmarks/Extraction/: .gitignore  __init__.py  generate_test_cases.py  load_ground_truth.py  mellea_bench.py  plot.py  recall_bench.py  run_bechmarks.py  test-spin.py
benchmarks/Extraction/notebooks/: find_eyecite_bugs.ipynb  mellea_bench.py
benchmarks/Extraction/plotting/: __init__.py  deep_hero.mplstyle  hero_charts.py
docs/: Assessment Model Development.md  Benchmark.md  Data Source.md  Extraction Model Development.md  MOTIVATION.md  Not Found Candidate Search.md  Preprocessing Development.md  Validation Model Development.md  Validation Window Redesign.md  courtlistener-client.md
docs/Extraction/: Extraction.md  Feedback Loop.md  GNN.md
docs/architecture/: appropriateness-evaluation-layer.md  assessment-package.md  document-artifact-model.md  per-citation-execution-model.md  pin-cite-page-resolution.md  prefix-cached-document-reasoning.md  shared-reextraction-workflow.md
docs/development/: Ambiguous Resolution.md  Benchmark.md  Document Inference Development.md  Extraction Model Development.md  Not Found Candidate Search.md  Not-Found Retrieval Agent.md  Preprocessing Development.md  Validation Model Development.md
docs/development/assessment/: ambiguous-citations.md  case-name.md  court.md  index.md  year.md
docs/development/citation-nodes/: index.md
docs/development/handoffs/: 2026-07-12-citation-node-retrieval-handoff.md  2026-07-20-pin-cite-page-resolution-handoff.md
docs/development/retrieval/: court.md  index.md  locator.md  not-found-candidate-search.md  not-found-retrieval-agent [in progress].md  reporter-jurisdiction-inference [in progress].md  retrieval-route-research-corpus [in progress].md
docs/development/validation/: court.md  index.md  locator.md  not-found-candidate-search.md  not-found-retrieval-agent [in progress].md
docs/examples/notebooks/: extraction.ipynb  eyecite.ipynb  find_eyecite_bugs.ipynb  mellea-practice.py  test_label_studio_formatter.ipynb
docs/knowledge/: Court Level Classification [in progress].md  Court Level Classification.md  CourtListener Search API.md  Data Source.md  Decision Publication, Access, and Locators.md  How We Handle Not-Found.md  Mellea Usage.md  Not-Found Retrieval Sources [in progress].md  Reporter Court Inference.md
docs/reference/: Mellea-LRC API Reference.md  glossary.md
examples/: extraction.ipynb
examples/mellea_litellm_mwe/: .env.example  README.md  mwe.py  pyproject.toml
fixtures/bookmarked/: README.md  bookmarked.txt  bookmarks.json
fixtures/bookmarked/sets/: bookmark-date-extraction.README.md  bookmark-date-extraction.json  bookmark-date-extraction.txt  bookmark-date-recovery.README.md  bookmark-date-recovery.json  bookmark-date-recovery.txt  bookmark-research.README.md  bookmark-research.json  bookmark-research.txt
fixtures/citation_sets/: README.md
fixtures/citation_sets/date-recovery/: solis-whitespace.txt
fixtures/citation_sets/exact-lookup-found/: beery.txt  destfino.txt  lampe-linkage-defect.txt  landis.txt  monell.txt
fixtures/citation_sets/not-found-docket-evidence/: boeser.txt  martinelli.txt  peterson.txt  solis-marrufo.txt
frontend/: .env.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
notebooks/: explore.example.ipynb  search_semantic.example.ipynb
scripts/: README.md  __init__.py  bookmark_fixture.py  reextract_case_name.py  reextract_case_name_after_retrieval.py
scripts/annotation/: README.md  pre_annotate.py  upload_schema.py  upload_tasks.py
scripts/e2e_backend/: README.md  __init__.py  api.py  label_studio_bridge.py  local_server.py  pipeline.py  preprocess_test_pdfs.py  run_artifact_pipeline.py  snapshot_corpus.py
scripts/label_studio/: README.md  __init__.py  cli.py  label_studio.py  label_studio_config.xml  pre_annotate.py  upload_schema.py  upload_tasks.py
scripts/modal/: README.md  __init__.py  app.py  cl_access_app.py  courtlistener_server.py  label_studio_server.py  pipeline.py
scripts/modal/courtlistener/: README.md  __init__.py  server.py
src/mellea_lrc/: __init__.py  cited_document_inference.py  pin_cite_inference.py
tests/: UvScaffolding_sample_file_test.py  conftest.py  init_test.py  test_assessment.py  test_bookmark_fixture.py  test_citation_nodes.py  test_cited_document_inference.py  test_court_inference.py  test_courtlistener_api.py  test_courtlistener_cache.py  test_courtlistener_citation_lookup.py  test_courtlistener_client.py  test_courtlistener_lookup.py  test_courtlistener_remote.py  test_courtlistener_search.py  test_docket_evidence.py  test_document_artifacts.py  test_e2e_backend_pipeline.py  test_env.py  test_extraction.py  test_jurisdiction_inference.py  test_label_studio.py  test_llm_config.py  test_llm_ivr.py  test_mellea_extractor.py  test_modal_pipeline.py  test_pin_cite_inference.py  test_pin_cite_page_region.py  test_pipeline.py  test_preprocessing.py  test_reporter_jurisdiction.py  test_retrieval.py  test_serialization.py  test_snapshot_corpus.py  test_validation.py
tests/data/: Correct_Citations_Korematsu_v_US.txt  Incorrect_Citations_Korematsu_v_US.txt  Incorrect_Span_Korematsu_v_US.txt  Korematsu_v_US.txt
tests/llm/: README.md  test_mellea_case_name_check.py  test_mellea_case_name_reextraction.py
tests/smoke/: README.md  test_assessment_provider_remote.py  test_case_name_assessment_remote.py  test_case_name_prepare_remote.py  test_case_name_reextract_before_retrieval_remote.py  test_cited_document_inference_remote.py  test_courtlistener_client_e2e.py  test_courtlistener_remote.py  test_label_studio_remote.py  test_label_studio_upload_remote.py  test_llm_api_remote.py  test_llm_provider_remote.py  test_pin_cite_inference_remote.py  test_pin_cite_page_region_remote.py
utils/: pdf-to-text.py
(+169 files in other folders)
