[project]
name = "mellea-lrc"
version = "0.1.9" 
#          ^^^^^
# Wheel names will be generated according to this value. Do not manually modify this value; instead
# update it according to committed changes by running this command from the root of the repository:
#
#   uv run python -m AutoGitSemVer.scripts.UpdatePythonVersion ./pyproject.toml ./src

description = "Mellea contrib package to provide requirements for the legal domain"
readme = "README.md"
authors = [
    { name = "Di Wu (Woody)", email = "dwu400@gatech.edu" },
    { name = "Adrian Lozada", email = "alozada7@gatech.edu" },
    { name = "Robert Bates", email = "rbates8@gatech.edu" },
]
requires-python = ">= 3.10"
dependencies = [
    "pydantic>=2,<3",
    "requests>=2.32,<3",
]
classifiers = [
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
]

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/gt-csse/mellea-lrc"
Documentation = "https://github.com/gt-csse/mellea-lrc"
Repository = "https://github.com/gt-csse/mellea-lrc"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
# Optional mellea_lrc pipeline-stage extras.
preprocessing = [
    "charset-normalizer>=3.4.7",
    "docling>=2.0",
]
extraction = [
    "docling>=2.102.2",
    "eyecite>=2.6",
    "mellea>=0.3.2",
]
llm = [
    "httpx>=0.28,<1",
    "mellea>=0.3.2,<0.4",
    "openai>=2,<3",
]

# Shared utilities for scripts and notebooks.
scripts = [
    "python-dotenv>=1.0",
    "requests>=2.32",
]

# Full local pipeline (preprocess -> extract -> validate -> assess).
pipeline = [
    { include-group = "preprocessing" },
    { include-group = "extraction" },
    { include-group = "llm" },
    { include-group = "scripts" },
]

# Label Studio upload tooling.
label-studio = [
    { include-group = "extraction" },
    { include-group = "scripts" },
]

# CourtListener access HTTP service.
courtlistener = [
    { include-group = "scripts" },
    "fastapi[standard]>=0.115",
    "python-multipart>=0.0.9",
]

# R2-backed citation cache for deployed CourtListener access.
courtlistener-r2 = [
    { include-group = "courtlistener" },
    "boto3>=1.34",
]

# Modal deploy targets (E2E backend and CourtListener access).
modal = [
    { include-group = "pipeline" },
    { include-group = "courtlistener-r2" },
    "modal>=1.0,<2.0",
]

# Default local and CI environment.
dev = [
    { include-group = "extraction" },
    { include-group = "scripts" },
    { include-group = "courtlistener" },
    "autogitsemver>=0.9.13",
    "openai>=2.42.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
    "typer<0.26",
]
eval = [
    "matplotlib>=3.10.9",
    "pandas>=2.3.3",
]
notebook = [
    "ipykernel>=7.2.0",
    "ipython>=8.39.0",
    "jupyter>=1.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
# Coverage report still runs (html/term/xml), but the failure gate is disabled so
# coverage no longer blocks R&D PRs. To re-enable enforcement, append
# " --cov-fail-under=95.0" to addopts below.
addopts = "--verbose -vv --capture=no -p no:faker --cov=mellea_lrc --cov-report html --cov-report term --cov-report xml:coverage.xml"
markers = [
    "heavy: opt-in local integration tests that use heavy dependencies or real document conversion",
    "remote_smoke: opt-in smoke tests that call external services",
    "llm_remote_sanity: opt-in live sanity tests for configured LLM endpoints and LLM-backed workflows",
]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
exclude = ["tests/**"]


select = ["ALL"]

ignore = [
    "ANN002", # Missing type annotation for `*args`
    "ANN003", # Missing type annotation for `**kwargs`
    "BLE001", # Do not catch blind exception: `Exception`
    "COM812", # Trailing comma missing
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in `__init__` method
    "D202", # No blank lines allowed after function docstring
    "E501", # Line too long
    "FIX002", # Line contains TODO, consider resolving the issue
    "I001", # Import block is un-sorted or un-formatted
    "N802", # Function name `xxx` should be lowercase
    "N999", # Invalid module name
    "RSE102", # Unnecessary parentheses on raise exception
    "S101", # Use of assert detected
    "TC006", # Add quotes to type expression in `typing.cast()`
    "TD002", # Missing author in TODO
    "TD003", # Missing issue link for this TODO
    "TRY002", # Create your own exception
    "TRY300", # Consider moving this statement to an `else` block
    "UP032", # Use f-string instead of `format` call
    "D203", # Incorrect blank lines before class
    "D213", # Multiline line summary second line
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 20
max-returns = 20

[tool.uv.build-backend]
module-name = "mellea_lrc"
